@@ -121,9 +121,7 @@
         <input type="submit" name="purge"
                value="${dgettext('acct_mgr', 'Remove selected entries')}" />
         <input type="submit" name="unselect"
-               value="${dgettext('acct_mgr', 'Undo selection')}" /><br />
-        <input type="submit" name="list"
-               value="${dgettext('acct_mgr', 'Back to accounts')}" />
+               value="${dgettext('acct_mgr', 'Undo selection')}" />
       </div>
     </form>
   </body>
